--- a/SLib.vcxproj
+++ b/SLib.vcxproj
@@ -164,8 +164,10 @@
     <ClInclude Include="sPattern\SSingleton.h" />
     <ClInclude Include="sPattern\SSubject.h" />
     <ClInclude Include="sUi\SApplication.h" />
+    <ClInclude Include="sUi\SControl.h" />
     <ClInclude Include="sUi\SDialog.h" />
     <ClInclude Include="sUi\SButton.h" />
+    <ClInclude Include="sUi\SEditText.h" />
     <ClInclude Include="sUi\SLabel.h" />
     <ClInclude Include="sUi\SMessageBox.h" />
     <ClInclude Include="sUi\SMessageHandler.h" />
@@ -232,8 +234,10 @@
     <ClCompile Include="sPattern\SSingleton.cpp" />
     <ClCompile Include="sPattern\SSubject.cpp" />
     <ClCompile Include="sUi\SApplication.cpp" />
+    <ClCompile Include="sUi\SControl.cpp" />
     <ClCompile Include="sUi\SDialog.cpp" />
     <ClCompile Include="sUi\SButton.cpp" />
+    <ClCompile Include="sUi\SEditText.cpp" />
     <ClCompile Include="sUi\SLabel.cpp" />
     <ClCompile Include="sUi\SMessageBox.cpp" />
     <ClCompile Include="sUi\SMessageHandler.cpp" />
