--- a/SLib.vcxproj.filters
+++ b/SLib.vcxproj.filters
@@ -48,12 +48,6 @@
     <ClInclude Include="sGraphic\SBufferDC.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="sGraphic\SIcon.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="sGraphic\SCursor.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="sMedia\SMedia.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -327,6 +321,15 @@
     <ClInclude Include="sUi\SMenuBar.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="sUi\SHandle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="sUi\SIcon.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="sUi\SCursor.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sUi\SMessageHandler.cpp">
@@ -360,12 +363,6 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="sGraphic\SBufferDC.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="sGraphic\SIcon.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="sGraphic\SCursor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="sMedia\SMedia.cpp">
@@ -543,6 +540,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="sUi\SMenuBar.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sUi\SIcon.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sUi\SCursor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
